[package]
name = "cstr"
version = "0.1.6"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Macro for building static CStr reference"
repository = "https://github.com/upsuper/cstr"
license = "MIT"
keywords = ["macro", "cstr"]
readme = "README.md"

[badges]
travis-ci = { repository = "upsuper/cstr", branch = "master" }

[dependencies]
cstr-macros = {path = "./macros", version = "0.1.4"}
procedural-masquerade = "0.1"
