[package]
name = "cstr"
version = "0.2.1"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Macro for building static CStr reference"
repository = "https://github.com/upsuper/cstr"
license = "MIT"
keywords = ["macro", "cstr"]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "upsuper/cstr", branch = "master" }

[dependencies]
proc-macro2 = "1.0.18"
quote = "1.0.7"

[dependencies.syn]
version = "1"
default-features = false
features = ["parsing", "printing"]

[dev-dependencies]
trybuild = "1.0.30"
