[package]
name = "cstr-macros"
version = "0.1.1"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Procedural macros for cstr"
repository = "https://github.com/upsuper/cstr"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
procedural-masquerade = "0.1"
syn = "0.12"

[dev-dependencies]
quote = "0.4"
