[package]
name = "cstr-macros"
version = "0.1.1"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Procedural macros for cstr"
repository = "https://github.com/upsuper/cstr"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
procedural-masquerade = "0.1"

[dependencies.syn]
version = "0.12"
default-features = false
features = ["derive", "parsing"]

[dev-dependencies]
quote = "0.4"
