[package]
name = "cstr-macros"
version = "0.1.6"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Procedural macros for cstr"
repository = "https://github.com/upsuper/cstr"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
procedural-masquerade = "0.1"

[dependencies.syn]
version = "1"
default-features = false
features = ["derive", "parsing"]

[dev-dependencies]
quote = "1"
